Bug Fixes
Fixed small glitch with text not showing at the end

--- a/public/style.css
+++ b/public/style.css
@@ -42,7 +42,7 @@ body{
   margin: auto;
     width: 60%;
 }
-message_container{
+.message_container{
     width:100%;
     display:block;
 }
